Grid alignment fixed

--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply gap-4 border-t-2 border-b-2 border-gray-400;
+  @apply gap-3 border-b-4 border-gray-300;
 }
 
 .layoutA {
